public page text wrap fix

--- a/frontend/src/styles/public-page.css
+++ b/frontend/src/styles/public-page.css
@@ -48,10 +48,12 @@
 .public-page-container .title {
   font-size: 1.8rem;
   font-weight: 600;
-  white-space: nowrap;
-  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: wrap;
+  /* overflow: hidden; */
+  /* text-overflow: ellipsis; */
   margin: 0.8rem 0px 2rem;
+  width: 100%;
 }
 .public-page-container .checklist-tasks {
   max-height: 450px;
